[project]
name = "myblog-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alipay-sdk-python==3.7.1001",
    "django==4.2",
    "django-apscheduler==0.7.0",
    "django-cors-headers==4.9.0",
    "django-environ==0.12.0",
    "django-filter>=25.1",
    "django-mdeditor==0.1.20",
    "django-redis==6.0.0",
    "django-simpleui==2026.1.13",
    "djangorestframework==3.16.1",
    "djangorestframework-recursive==0.1.2",
    "djangorestframework-simplejwt==5.5.1",
    "drf-extensions==0.8.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "markdown>=3.10.1",
    "pymysql>=1.1.2",
    "qiniu>=7.17.0",
]
